ui z-index fixed

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
   display: flex;
   justify-content: center;
   margin: 20px;
-  max-width: 800px;
 }
 .container-1 {
 }
@@ -27,10 +26,17 @@
 }
 .seesaw-container {
   position: relative;
-  height: 400px;
-  background-color: cornflowerblue;
+  border: 1px solid black;
   padding: 10px;
-  z-index: -2;
+  background-color: rgb(242, 123, 123);
+}
+.seesaw-container-2 {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  cursor: pointer;
+  padding: 10px;
+  margin: 0 auto;
 }
 .seesaw-plank {
   position: absolute;
@@ -41,6 +47,7 @@
   background-color: black;
   transform: translateX(-50%);
   transition: transform 0.3s ease;
+  z-index: 2;
 }
 .seesaw-pivot {
   position: absolute;
@@ -52,6 +59,6 @@
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   border-bottom: 50px solid #555;
-  z-index: -1;
+  z-index: 1;
   margin-bottom: 20px;
 }
